Second Multiplayer Iteration
Singleplayer now has 4 AI ghosts.

Multiplayer now has (synchronous) movement and pellet collection.